lb-sg.tf
resource "aws_security_group" "lb-sg" {
  name        = "LB-SG"
  description = "Allow tls for inbound traffic"
  vpc_id = aws_vpc.2-tier-VPC.id

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
